--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ h1{color:#000}
 <body>
 <header>
 <div class="brand"><img alt="לוגו עוגנים" src="logo_anchor.svg"/><h1 class="brand-title">עוגנים – גישור משפחתי</h1></div>
-<p>עוגנים - גישור במשפחה, רועי בר</p>
+<p>מלווה זוגות בתחילת הדרך אל גירושין בהסכמה והורות משותפת מכבדת</p>
 </header>
 <section>
 <h2>כמגשר מוסמך</h2>
