--- a/index.html
+++ b/index.html
@@ -5,38 +5,43 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>עוגנים – גישור משפחתי</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9fafb; color: #333; direction: rtl; }
-    header { background: #FFD6FF; color: #222; text-align: center; padding: 2rem; }
-    header h1 { margin: 0; font-size: 2.2rem; color:#000;}
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
+      background: linear-gradient(135deg,#7fffd4,#4682b4,#9370db);
+      color: #fff; direction: rtl;
+    }
+    header { background: rgba(0,0,0,0.4); text-align: center; padding: 2rem; }
+    header h1 { margin: 0; font-size: 2.2rem; color:#fff;}
     header p { margin-top: 0.5rem; font-size: 1.2rem; }
-    section { padding: 2rem; max-width: 800px; margin: auto; }
-    h2 { color: #C8C3EF; }
-    .cta { text-align: center; margin: 2rem 0; }
-    .cta a { display:inline-flex; align-items:center; gap:8px; background: #FFD6FF; color: #000; padding: 0.8rem 1.2rem; border-radius: 8px; text-decoration: none; font-weight: bold; border:1px solid #ddd;}
-    .cta a svg { width:20px; height:20px; }
-    .cta a:hover { opacity:0.85; }
-    footer { background: #FFD6FF; color: #222; text-align: center; padding: 1rem; margin-top: 2rem; }
-    .big-text { font-size: 1.6rem; font-weight: bold; text-align: center; color: #333; margin-top: 2rem; }
-    .container { background: white; border-radius: 16px; padding: 30px; border: 3px solid #C8C3EF; box-shadow: 0 4px 20px rgba(0,0,0,0.08); max-width: 900px; margin: 40px auto; }
+    section { padding: 2rem; max-width: 800px; margin: auto;
+              background: rgba(0,0,0,0.35); border-radius:16px; }
+    h2 { color: #FFD6FF; }
+    ul { line-height:1.8; }
+    .contact-title { text-align:center; font-size:1.6rem; margin-top:2rem; color:#FFD6FF; }
+    .icons { display:flex; gap:24px; justify-content:center; margin:1.5rem 0; }
+    .icons a svg { width:48px; height:48px; transition:transform 0.2s; }
+    .icons a:hover svg { transform:scale(1.1); }
+    footer { background: rgba(0,0,0,0.4); text-align: center; padding: 1rem; margin-top: 2rem; color:#fff; }
     .brand { display:flex; align-items:center; gap:12px; justify-content:center; }
-    .brand img { width:44px; height:44px; }
-    .brand-title { font-size: 2.2rem; margin: 0; color:#000; }
-    @media (max-width:600px){ .brand-title{ font-size:1.8rem; } }
+    .brand img { width:64px; height:64px; }
+    .brand-title { font-size: 2rem; margin: 0; color:#fff; }
   </style>
   <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
 </head>
 <body>
 <header>
   <div class="brand">
-    <img src="logo_anchor.svg" alt="לוגו עוגנים"/>
+    
     <h1 class="brand-title">עוגנים – גישור משפחתי</h1>
   </div>
   <p>מלווה זוגות בתחילת הדרך אל גירושין בהסכמה והורות משותפת מכבדת</p>
 </header>
-<main class="container">
+<main>
 <section>
   <h2>כמגשר מוסמך</h2>
   <p>אני מספק ליווי מקצועי לזוגות הנמצאים בתהליך פרידה או גירושין. הגישור מאפשר לכם להגיע להסכמות הוגנות ומאוזנות בנושאים מרכזיים כמו חלוקת רכוש, משמורת ילדים, מזונות ועוד - בסביבה בטוחה ונטולת עימות.</p>
+
   <h2>היתרונות של גישור:</h2>
   <ul>
     <li>חיסכון משמעותי בזמן ובכסף לעומת הליך משפטי ממושך</li>
@@ -45,24 +50,21 @@
     <li>הקטנת הפגיעה הרגשית, במיוחד כשיש ילדים</li>
     <li>יצירת תקדים לתקשורת עתידית כהורים משותפים</li>
   </ul>
+
   <h2>השירות כולל:</h2>
   <p>ישיבות גישור מובנות, הכנת טיוטות הסכם, הכוונה משפטית בסיסית, וליווי עד להגשת ההסכם לבית המשפט. כל התהליך נערך בסודיות מלאה ובקצב המתאים לכם.</p>
-  <p>גישור אינו מתאים לכל המקרים, אך עבור זוגות המוכנים לדיאלוג בונה, זו דרך מכבדת ויעילה לסיום מכובד של פרק זה בחייכם ותחילת פרק חדש המכבד אתכם.</p>
 
-  <div class="cta">
-    <a href="https://wa.me/972542090937">
+  <div class="contact-title">ליצירת קשר</div>
+  <div class="icons">
+    <a href="https://wa.me/972542090937" target="_blank" aria-label="וואטסאפ">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="#25D366"><path d="M16 0C7.163 0 0 7.163 0 16c0 2.885.76 5.702 2.204 8.173L0 32l7.61-2.138A15.9 15.9 0 0016 32c8.837 0 16-7.163 16-16S24.837 0 16 0z"/></svg>
-      וואטסאפ
     </a>
-  </div>
-  <div class="cta">
-    <a href="mailto:roygishor@gmail.com?subject=פנייה מעוגנים">
+    <a href="mailto:roygishor@gmail.com?subject=פנייה מעוגנים" aria-label="מייל">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1DA1F2"><path d="M12 12.713l11.985-9.713H0L12 12.713zm0 2.574L0 5.74V18.26h24V5.74L12 15.287z"/></svg>
-      מייל
     </a>
   </div>
 
-  <div class="big-text">אני פה אתכם ובשבילכם</div>
+  <div class="big-text" style="text-align:center; font-weight:bold; margin-top:2rem; font-size:1.4rem;">אני פה אתכם ובשבילכם</div>
 </section>
 </main>
 <footer>
