--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     header { background: rgba(0,0,0,0.4); text-align: center; padding: 2rem; }
     header h1 { margin: 0; font-size: 2.2rem; color:#fff;}
     header p { margin-top: 0.5rem; font-size: 1.2rem; }
-    section { padding: 2rem; max-width: 800px; margin: auto;
+    section { padding: 2rem; max-width: 800px; margin: 40px auto;
               background: rgba(0,0,0,0.35); border-radius:16px; }
     h2 { color: #FFD6FF; }
     ul { line-height:1.8; }
@@ -35,7 +35,7 @@
     
     <h1 class="brand-title">עוגנים – גישור משפחתי</h1>
   </div>
-  <p>מלווה זוגות בתחילת הדרך אל גירושין בהסכמה והורות משותפת מכבדת</p>
+  <p>רועי בר - מלווה זוגות בתחילת הדרך אל גירושין בהסכמה והורות משותפת מכבדת</p>
 </header>
 <main>
 <section>
@@ -61,6 +61,10 @@
     </a>
     <a href="mailto:roygishor@gmail.com?subject=פנייה מעוגנים" aria-label="מייל">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1DA1F2"><path d="M12 12.713l11.985-9.713H0L12 12.713zm0 2.574L0 5.74V18.26h24V5.74L12 15.287z"/></svg>
+    </a>
+  
+    <a href="https://www.facebook.com/profile.php?id=100068328883192" target="_blank" aria-label="פייסבוק">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1877F2"><path d="M22 12a10 10 0 1 0-11.5 9.9v-7h-2v-3h2v-2.3c0-2 1.2-3.1 3-3.1.9 0 1.8.1 1.8.1v2h-1c-1 0-1.3.6-1.3 1.2V12h2.3l-.4 3h-1.9v7A10 10 0 0 0 22 12"/></svg>
     </a>
   </div>
 
