Fix viewport meta tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="rtl" lang="he">
 <head>
   <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>עוגנים – גישור משפחתי</title>
 
   <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
@@ -26,7 +26,6 @@
     header h1 {
       margin: 0;
       font-size: 2.2rem;
-      color: #fff;
     }
 
     header p {
@@ -50,4 +49,9 @@
       line-height: 1.8;
     }
 
-    /
+    /* פריסת תמונה + טקסט */
+    .content-wrap {
+      display: flex;
+      gap: 24px;
+      align-items: flex-start;
+      flex-wrap:
